# caf-request-recieve

./: .gitignore  CMakeLists.txt  conanfile.txt
.profiles/: linux_x86_64  win_msvc_2019_x86_release_build  win_msvc_2019_x86_release_host
cmake/: FindCAF.cmake  console_app.cmake  console_caf.cmake  library.cmake  qt_app.cmake
src/: CMakeLists.txt  duration.h  singleton.h
src/console_app/: main.cpp
src/console_caf/: main.cpp
src/qt_app/: about_dialog.cpp  about_dialog.h  about_dialog.ui  main.cpp
